Apply scrollbar to correct element when text overflows

--- a/src/_scss/_global.scss
+++ b/src/_scss/_global.scss
@@ -77,6 +77,7 @@ hr {
 pre {
   @include vertical-rhythm('padding', 0.5);
   tab-size: 2;
+  overflow-x: auto;
 }
 
 /* Links
@@ -154,10 +155,6 @@ sup {
 
 sub {
   bottom: -0.25em;
-}
-
-code {
-  overflow-x: auto;
 }
 
 /* Lists
